smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/list-invalid-member.smithy
// Parse error at line 5, column 6 near `: `: Unexpected member of com.foo#MyList: 'foo' | Model
namespace com.foo

list MyList {
  foo: smithy.api#String,
}
